<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="24"
            tools:context=".view.VerbStatisticsFragment">


    <!-- TODO: Update blank fragment layout-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/statistics"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="20sp"
        android:text="@string/conjugation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/conj_1st"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/conj_2nd"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="4"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/conj_3rd"/>/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="5"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/conj_4th"/>/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_row="7"
        android:layout_column="0"
        android:textSize="20sp"
        android:text="@string/tense"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="8"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="- Present"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="9"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/imperfect"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="10"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/future"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="11"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/perfect"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="12"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/pluperfect"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="13"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/futurePerfect"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_row="15"
        android:layout_column="0"
        android:textSize="20sp"
        android:text="@string/mood"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="16"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/indicative"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="17"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/imperative"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="18"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/subjunctive"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_row="20"
        android:layout_column="0"
        android:textSize="20sp"
        android:text="@string/voice"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="21"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/active"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_row="22"
        android:layout_column="0"
        android:textSize="15sp"
        android:text="@string/passive"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_row="23"
        android:layout_column="0"
        android:textSize="20sp"
        android:text="@string/skillLevel"/>

</GridLayout>
