<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_english_to_latin"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/english_to_latin"/>
        <item
            android:id="@+id/nav_latin_to_english"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/latin_to_english"/>
        <item
            android:id="@+id/nav_reset"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/reset"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
