<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.snewnham.birkbecklatin.view.MainActivity"
    tools:showIn="@layout/app_bar_main2">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="207dp"
        android:layout_height="88dp"
        android:text="TextView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-46dp"
        app:layout_constraintHorizontal_bias="0.229"/>


    <Button
        android:id="@+id/buttonVerbGame"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="155dp"
        android:text="@string/verbQuiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonNounGame"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:text="@string/nounQuiz"
        app:layout_constraintTop_toTopOf="@+id/buttonVerbGame"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonVerbGame"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Button
        android:id="@+id/buttonVerbPagerSelection"
        android:text="@string/verbLists"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonVerbGame"
        android:layout_marginLeft="-7dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonVerbGame"/>

    <Button
        android:id="@+id/buttonNounPagerSelection"
        android:text="@string/nounLists"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNounGame"
        app:layout_constraintLeft_toRightOf="@+id/buttonVerbPagerSelection"
        android:layout_marginLeft="8dp"/>




</android.support.constraint.ConstraintLayout>
